# eecs_405_project

./: .gitignore  CMakeLists.txt  README.md  actors.list  actresses.list  build.gradle  settings.gradle
09c/4a3/: SHA256E-s970305261--168733e78de2caadb2e5ee4de40b10d1c1838842b2782810ee1876dd91cdc3b1.list.log.cnk
421/9d4/: SHA256E-s573789285--a8b657253e3915d48414d0e0cedf4a08eb1fe395195f9b38c41dcb148c6b0e65.list.log.cnk
9c3/d47/: SHA256E-s196378847--b5d3b7e71abe55ff4c856e34ee96c7689cb413c9e123a959e3fc3d86f51d606f.csv.log.cnk
aad/f5b/: SHA256E-s163578231--2552d59d4b570365a37219d10f9b6930d5cd1902e6213f1026b43ed39d8f87fc.csv.log.cnk
cmake/Modules/: FindPqxx.cmake
containers/postgresql/: Dockerfile  create-user.sh
data/: actors.csv  actors.list  actors_and_actresses.csv  actresses.csv  actresses.db  actresses.list  dblp_authors.csv  imdb.db  uniprot_sequences.csv
dea/4e5/: SHA256E-s22999566--01ad967c78672d19e2e3302c950748dec34708f39e613ea8fe06050825d90845.csv.log.cnk
ded/fa3/: SHA256E-s65567696--60ff791b39f6132363260c24b97dbbf7dd9610e12f3b8d58786cd10391fea41b.csv.log.cnk
e2b/9bb/: SHA256E-s42568130--ca65cdcc66ac9e18230604e65cd757453ed48bca8d26794f1c73e9d050ad5ded.csv.log.cnk
e79/202/: SHA256E-s54624256--6e794eced060bc677a49c30e91686b8be20b11e09eac42ed797b30f1a9837a63.db.log.cnk
include/: trie.h
scripts/: graph_vgram_construction.py  graph_vgram_merge_skip_data.py
src/: pqxx_example.cpp  trie.cpp
src/main/java/com/devinschwab/eecs405/: ConstructVGramIndexBenchmark.java  DataStatistics.java  EditDistance.java  GramDictionary.java  ImportDblpDataset.java  ImportImdbDatasets.java  ImportUniprotDataset.java  MakeVGramIndex.java  NagVectorGenerator.java  QGram.java  VGramIndex.java
src/main/java/com/devinschwab/eecs405/mergeskip/: DivideSkip.java  MergeSkip.java  VGramDivideSkip.java  (+1 more)
src/main/java/com/yan/: BinarySearch.java  ConstructStaticIndexBenchmark.java  GenerateInvertedList.java  MergeSkip.java  RawToList.java  TestDivideSkp.java  TestStaticDivideSkp.java  TestStaticMergeSkip.java  TestVGram.java  TestVGramDivideSkip.java  TestVGramMergeSkip.java  VGramBinarySearch.java  VGramMergeSkip.java  test.java
src/main/java/com/yan/benchmarks/: BenchmarkStaticDivideSkip.java  BenchmarkStaticMergeSkip.java  BenchmarkVGramDivideSkip.java  BenchmarkVGramMergeSkip.java
src/test/java/com/devinschwab/eecs405/: EditDistanceTest.java  GramDictionaryTest.java  NagVectorGeneratorTest.java  QGramTest.java
src/test/java/com/yan/: GenerateInvertedListTest.java
test/: example_test.cpp  trie_tests.cpp
(+11 files in other folders)
